--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="flex space-x-8 mb-12">
                     <div class="border-r-2 border-gray-300 pr-10">
                         <h1 class="font-bold text-lg">Email</h1>
-                        <h1 class="text-base">vemissa@gotham.com</h1>
+                        <h1 class="text-base">venissa@gotham.com</h1>
                     </div>
                     <div class="border-r-2 border-gray-300 pr-10 pl-2">
                         <h1 class="font-bold text-lg">Phone</h1>
