--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <h1 class="font-bold"> Hi There,</h1>
                         <h1 class="text-7xl font-bold pb-2">I am Ven<span class="text-red-500">i</span>ssa</h1>
                         <h1 class="text-4xl font-bold text-gray-700 pb-2">I am designer during daytime</h1>
-                        <h1 class="text-2xl font-bold text-gray-700 pb-8">&work with batman duting nights.</h1>
+                        <h1 class="text-2xl font-bold text-gray-700 pb-8">&work with batman during nights.</h1>
                         <button class="bg-red-600 px-16 py-3 text-white">Ask Me How</button>
 
 
